--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .main-title {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 400%;
     font-weight: bold;
     color: white;
@@ -14,9 +14,9 @@
     text-transform: uppercase;
     position: absolute;
     text-align: center;
-    top: 1in;
-    left: 30%;
-    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.7);
+    width: 100%;
+    top: 0.5in;
+    text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.7);
 }
 
 ol {
@@ -42,7 +42,7 @@ li {
     width: 100%;
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
-    backdrop-filter: brightness(80%);
+    backdrop-filter: brightness(90%);
 }
 
 .filter-bg, .img-wrapper {
@@ -52,7 +52,7 @@ li {
 }
 
 .img-wrapper img {
-    filter: brightness(80%);
+    filter: brightness(100%);
     width: 80%;
 }
 
@@ -61,13 +61,14 @@ li {
 }
 
 .title-section {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 300%;
     font-weight: bold;
-    color: #656D75;
+    color: #81a0c0;
     margin-bottom: 0.3in;
-    letter-spacing: 0.2in;
+    letter-spacing: 0.05in;
     text-transform: uppercase;
+    text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.568);
 }
 
 .text-wrapper {
@@ -75,7 +76,7 @@ li {
 }
 
 .text-wrap {
-    padding: 2%;
+    padding: 3%;
     border: 2px solid black;
     backdrop-filter: blur(10px);
     border-radius: 5px;
